--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-error-boundary": "^3.1.4",
     "react-loader-spinner": "^5.1.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "web-vitals": "^2.1.4"
   },
