--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "prettier": "^2.5.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "corss": "^2.8.5",
     "express": "^4.17.2"
   },
   "scripts": {
